--- a/catalog/view/theme/d_visualize/template/component/d_breadcrumb/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_breadcrumb/default.twig
@@ -1,5 +1,5 @@
 <!-- > d_breadcrumb -->
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-md-12">
             <ul class="breadcrumb">
