--- a/catalog/view/theme/d_visualize/template/component/product_category/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/product_category/default.twig
@@ -6,11 +6,14 @@
             <p>{{ text_empty }}</p>
             <div class="buttons">
                 <div class="pull-right">
-                    {% include component.button.template with({
-                    link:continue,
-                    style:'primary',
-                    text_button:button_continue
+                    {% include partial.button.template with partial.button|merge({
+                        button: true,
+                        id:'button-cart',
+                        style:'secondary',
+                        text_button:button_cart,
+                        title:button_cart,
                     }) %}
+
 
                 </div>
             </div>
