add stable admin

--- a/admin/view/stylesheet/d_visualize/page/_edit.scss
+++ b/admin/view/stylesheet/d_visualize/page/_edit.scss
@@ -9,7 +9,7 @@
   }
 }
 
-#container, #content, #visualize, .visualize, .vz-edit-theme, .iframe, iframe {
+#container, #content, #visualize, .visualize, .vz-edit-theme, .vz-edit-iframe, iframe {
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -19,31 +19,21 @@
   padding-bottom: 0;
 }
 
-.vz-edit-theme {
-  lost-flex-container: row;
-  .menu {
-    lost-column: 2/12 0 0px;
+.vz-edit {
+  &-theme {
+    display: flex;
+    flex-direction: row;
   }
-  .iframe {
-    lost-column: 10/12;
+  &-menu {
+    min-width: 300px;
+    .menu-hidden & {
+      min-width: 70px;
+      width: 70px;
+    }
+  }
+  &-iframe {
     iframe {
       width: 100%;
     }
-  }
-}
-.edit.edit_vd {
-  .menu {
-    background: white;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    top: 0;
-    &_hidden{
-      width: 0;
-      overflow: hidden;
-    }
-  }
-  .iframe{
-    lost-column: 12/12;
   }
 }
