--- a/catalog/view/theme/d_visualize/template/component/d_product_thumb/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_thumb/default.twig
@@ -1,50 +1,40 @@
-<div class="thumb-box">
-    <div class="product-thumb vis-product-thumb">
-        <div class="product-thumb_image">
-            {% if special %}
-                {% set priceInt = price|replace({"$": ""}) %}
-                {% set specialInt = special|replace({"$": ""}) %}
-                <div class="badge">-{{ 100 - (specialInt|number_format * 100 / priceInt|number_format)|number_format(0) }}%</div>
-            {% endif %}
-            <div class="add-to-fave">
-                <button type="button" data-toggle="tooltip" title="{{ button_wishlist }}"
-                        onclick="wishlist.add('{{ product_id }}');"><i class="fas fa-heart"></i></button>
-            </div>
-            <a href="{{ href }}">
-                <img src="{{ thumb }}"
-                     alt="{{ name }}"
-                     title="{{ name }}"
-                     class="img-responsive"/>
-            </a>
-        </div>
-        <div class="product-thumb_body">
-            <span class="product-name"><a href="{{ href }}">{{ name|length > 30 ? name|slice(0, 30) ~ '...' : name  }}</a></span>
-            {% if brand %}
-                <div class="product_brand">
-                    <span class="product_brand_value">{{ brand }}</span>
-                </div>
-            {% endif %}
-            <p class="product-description">{{ description }}</p>
+<div class="vz-product-thumb product-thumb">
+    <div class="image">
+        <a href="{{ href }}"><img src="{{ thumb }}" alt="{{ name }}" title="{{ name }}" class="img-responsive"/></a>
+    </div>
+    <div>
+        <div class="caption">
+            <h4><a href="{{ href }}">{{ name }}</a></h4>
+            <p>{{ description }}</p>
             {% if price %}
-                <div class="product-price-block">
-                    {% if not special %}
+                <p class="price"> {% if not special %}
                         {{ price }}
-                    {% else %} <span class="product-price product-price_actual">{{ special }}</span> <span
-                            class="product-price product-price_old">{{ price }}</span> {% endif %}
-                </div>
+                    {% else %} <span class="price-new">{{ special }}</span> <span
+                            class="price-old">{{ price }}</span> {% endif %}
+                    {% if tax %} <span class="price-tax">{{ text_tax }} {{ tax }}</span> {% endif %} </p>
             {% endif %}
-            <div class="additional-info">
-
-            </div>
-            {% include partial.d_rating.template with  partial.d_rating|merge({rating:rating,static_rating:true}) %}
-
+            {% if rating %}
+                {% include partial.d_rating.template with  partial.d_rating|merge({rating:rating,static_rating:true}) %}
+            {% endif %} </div>
+        <div class="button-group">
             {% include partial.button.template with partial.button|merge({
-            button:'cart.add('~ product_id ~', '~ minimum ~')',
-            style:'secondary',
-            classes:'btn-buy',
-            text_button:button_cart
+                button:'cart.add('~ product_id ~', '~ minimum ~')',
+                style:'secondary',
+                classes:'btn-buy',
+                text_button:button_cart
             }) %}
-            {#<button type="button" class="btn btn-vis btn-secondary btn-buy" onclick="cart.add('{{ product_id }}', '{{ minimum }}');">{{ button_cart }}</button>#}
+            {% include partial.button.template with partial.button|merge({
+                button: true,
+                style:'secondary',
+                classes:'',
+                text_button:'<i class="fa fa-heart"></i>',
+            }) %}
+            {% include partial.button.template with partial.button|merge({
+                button: true,
+                style:'secondary',
+                classes:'',
+                text_button:'<i class="fa fa-exchange"></i>',
+            }) %}
         </div>
     </div>
 </div>
