--- a/catalog/view/theme/d_visualize/template/component/d_product_thumb/default_expanded.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_thumb/default_expanded.twig
@@ -1,19 +1,50 @@
-<div class="card card-expanded">
-    <div class="image-wrap">
-        <img src="{{ thumb }}" alt="{{ name }}" title="{{ name }}" class="product-image"/>
-        <div class="product-cover">
-            <h3 class="product-name">{{ name }}</h3>
-            <p class="product-description">Award winning SEO Modules in one awesome package</p>
+<div class="thumb-box">
+    <div class="product-thumb vis-product-thumb">
+        <div class="product-thumb_image">
+            {% if special %}
+                {% set priceInt = price|replace({"$": ""}) %}
+                {% set specialInt = special|replace({"$": ""}) %}
+                <div class="badge">-{{ 100 - (specialInt|number_format * 100 / priceInt|number_format)|number_format(0) }}%</div>
+            {% endif %}
+            <div class="add-to-fave">
+                <button type="button" data-toggle="tooltip" title="{{ button_wishlist }}"
+                        onclick="wishlist.add('{{ product_id }}');"><i class="fas fa-heart"></i></button>
+            </div>
+            <a href="{{ href }}">
+                <img src="{{ thumb }}"
+                     alt="{{ name }}"
+                     title="{{ name }}"
+                     class="img-responsive"/>
+            </a>
         </div>
-    </div>
-    <div class="product-info">
-        <p class="product-subtitle">The heart of the SEO Module Ecosystem</p>
-        <ul class="product-capabilities">
-            <li>Implements the SEO Module API</li>
-            <li>Adds Target Keywords to Product,</li>
-            <li>Category, Manufacturer, information and static pages,</li>
-            <li>.htaccess file editor robots.txt file editor</li>
-        </ul>
-        <a href="#" class="btn btn-primary btn-md">Read more</a>
+        <div class="product-thumb_body">
+            <span class="product-name"><a href="{{ href }}">{{ name|length > 30 ? name|slice(0, 30) ~ '...' : name  }}</a></span>
+            {% if brand %}
+                <div class="product_brand">
+                    <span class="product_brand_value">{{ brand }}</span>
+                </div>
+            {% endif %}
+            <p class="product-description">{{ description }}</p>
+            {% if price %}
+                <div class="product-price-block">
+                    {% if not special %}
+                        {{ price }}
+                    {% else %} <span class="product-price product-price_actual">{{ special }}</span> <span
+                            class="product-price product-price_old">{{ price }}</span> {% endif %}
+                </div>
+            {% endif %}
+            <div class="additional-info">
+
+            </div>
+            {% include partial.d_rating.template with  partial.d_rating|merge({rating:rating,static_rating:true}) %}
+
+            {% include partial.button.template with partial.button|merge({
+                button:'cart.add('~ product_id ~', '~ minimum ~')',
+                style:'secondary',
+                classes:'btn-buy',
+                text_button:button_cart
+            }) %}
+            {#<button type="button" class="btn btn-vis btn-secondary btn-buy" onclick="cart.add('{{ product_id }}', '{{ minimum }}');">{{ button_cart }}</button>#}
+        </div>
     </div>
 </div>
