--- a/catalog/view/theme/d_visualize/template/component/button/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/button/default.twig
@@ -1,4 +1,4 @@
-{% set btn_classes = 'btn d-vis' %}
+{% set btn_classes = 'btn vz-button' %}
 {% if classes %}
     {% set btn_classes = btn_classes ~ ' ' ~ classes %}
 {% endif %}
