--- a/catalog/view/theme/d_visualize/template/component/d_product_list/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_list/default.twig
@@ -1,16 +1,19 @@
-{% if products %}
-    {% include partial.d_product_sort.template with partial.d_product_sort %}
-<div class="row products-list">
-    {% for product in products %}
-        <div class="product-layout product-list col-12">
-            {% include partial.d_product_thumb.template with partial.d_product_thumb|merge(product) %}
+<div class="vz-d_product_list vz-d_product_list_default">
+    {% if products %}
+        {% include partial.d_product_sort.template with partial.d_product_sort %}
+        <div class="row products-list">
+            {% for product in products %}
+                <div class="product-layout product-list col-12">
+                    {% include partial.d_product_thumb.template with partial.d_product_thumb|merge(product) %}
+                </div>
+            {% endfor %}
         </div>
-    {% endfor %}
+        <div class="row">
+            <div class="col-sm-6 text-center-lg text-right">{{ pagination }}</div>
+            <div class="col-sm-6 text-right">{{ results }}</div>
+        </div>
+    {% else %}
+        <p>{{ text_empty }}</p>
+        {% include partial.d_button_continue.template with partial.d_button_continue %}
+    {% endif %}
 </div>
-<div class="row">
-    <div class="col-sm-12 text-center-lg text-right">{{ pagination }}</div>
-</div>
-{% else %}
-<p>{{text_empty}}</p>
-{% include partial.d_button_continue.template with partial.d_button_continue %}
-{% endif %}
