--- a/catalog/view/theme/d_visualize/template/component/d_rating/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_rating/default.twig
@@ -1,5 +1,5 @@
 <div class="rating">
-	<input value="{{ rating }}" name="rating"
+	<input value="{{ rating }}" name="rating" hidden
 		   class="rating-loading" data-filled="fas fa-star" data-empty="fas fa-star empty"
             {% if static_rating %} data-readonly{% endif %}>
 </div>
