--- a/catalog/view/theme/d_visualize/template/component/form_group/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/form_group/default.twig
@@ -1,6 +1,6 @@
-{% set form_group_class = 'form-group d-vis vis-' ~  type %}
-{% set form_group_label_class = 'control-label vis-' ~  type %}
-{% set form_group_input_class = 'form-control d-vis vis-' ~  type %}
+{% set form_group_class = 'form-group vz-form-group vz-form-group_' ~  type %}
+{% set form_group_label_class = 'control-label vz-control-label vz-control-label_' ~  type %}
+{% set form_group_input_class = 'form-control vz-form-control vz-form-control' ~  type %}
 {% set form_group_div_class = '' %}
 {% if classes %}
     {% set form_group_input_class = form_group_input_class ~ ' ' ~ classes %}
