--- a/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
@@ -1,43 +1,54 @@
-<!-- > d_account_field_jag -->
-{% if customer_groups %}
-    <div class="form-group required" style="display: {% if customer_groups|length > 1 %}block{% else %}none{% endif %};">
-        <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md"><span>{{entry_customer_group}}</span></label>
-        <div class="{% if form %}col-sm-10{% endif %}">
-            {% for customer_group in customer_groups %}
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="customer_group_id" value="{{customer_group.customer_group_id}}" {% if customer_group.customer_group_id == customer_group_id %}checked="checked"{% endif %} />
-                        <span>{{customer_group.name}}</span></label>
-                </div>
-            {% endfor %}
-        </div>
-    </div>
+<!-- > d_account_field_default -->
+{% if customer_groups|length > 1 %}
+    {% include partial.form_group.template with partial.form_group|merge({
+        type:'radio',
+        id:'input-customer_group',
+        name:'customer_group',
+        required: true,
+        radio_values: [{ 'val':1,'name': text_yes},{'val':0,'name':text_no}],
+        radio_values_val:'val',
+        radio_values_check: customer_group,
+        radio_values_name: 'name',
+        placeholder:entry_customer_group,
+        classes:'',
+        text_input:entry_customer_group,
+        error:error_customer_group,
+    }) %}
 {% endif %}
 {% include partial.d_name_field.template with  partial.d_name_field|merge({form:form}) %}
-<div class="form-group required">
-    <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-email"><span>{{entry_email}}</span></label>
-    <div class="{% if form %}col-sm-10{% endif %}">
-        <input type="text" name="email" value="{{email}}" id="input-email" class="field form-control" />
-        {% if error_email %}
-            <div class="text-danger">{{error_email}}</div>
-        {% endif %}
-    </div>
-</div>
-<div class="form-group required">
-    <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-telephone"><span>{{entry_telephone}}</span></label>
-    <div class="{% if form %}col-sm-10{% endif %}">
-        <input type="text" name="telephone" value="{{telephone}}" id="input-telephone" class="field form-control" />
-        {% if error_telephone %}
-            <div class="text-danger">{{error_telephone}}</div>
-        {% endif %}
-    </div>
-</div>
+
+{% include partial.form_group.template with partial.form_group|merge({
+    type:'email',
+    id:'input-email',
+    name:'email',
+    required:true,
+    value:email,
+    text_input:entry_email ,
+    placeholder:entry_email ,
+    error:error_email
+}) %}
+
+{% include partial.form_group.template with partial.form_group|merge({
+    type:'text',
+    id:'input-telephone',
+    name:'telephone',
+    required:true,
+    value:telephone,
+    text_input:entry_telephone ,
+    placeholder:entry_telephone ,
+    error:error_telephone
+}) %}
+
 {% if constant('VERSION') < '3.0.0.0' %}
-    <div class="form-group">
-        <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-fax"><span>{{entry_fax}}</span></label>
-        <div class="{% if form %}col-sm-10{% endif %}">
-            <input type="text" name="fax" value="{{fax}}" id="input-fax" class="field form-control" />
-        </div>
-    </div>
+    {% include partial.form_group.template with partial.form_group|merge({
+        type:'text',
+        id:'input-fax',
+        name:'fax',
+        required:false,
+        value:fax,
+        text_input:entry_fax ,
+        placeholder:entry_fax ,
+        error:error_fax
+    }) %}
 {% endif %}
-<!-- /> d_account_field_jag -->
+<!-- /> d_account_field_default -->
