--- a/catalog/view/theme/d_visualize/template/extension/module/slideshow.twig
+++ b/catalog/view/theme/d_visualize/template/extension/module/slideshow.twig
@@ -1,4 +1,4 @@
-<div class="slideshow-slider">
+<div class="vz-extension__slideshow slideshow-slider">
     <div class="swiper-viewport">
         <div id="slideshow{{ module }}" class="swiper-container">
             <div class="swiper-wrapper"> {% for banner in banners %}
