COMPONENT MIXING ARE WORKING !!

--- a/admin/view/stylesheet/d_visualize/d_visualize.pcss
+++ b/admin/view/stylesheet/d_visualize/d_visualize.pcss
@@ -3,6 +3,11 @@
 .visualize{
   @import "common/_import.scss";
 }
+body{
+  h1{
+
+  }
+}
 @import "component/_import.scss";
 @import "components/_import.scss";
 @import "page/_import.scss";
