--- a/catalog/view/theme/d_visualize/template/component/button/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/button/default.twig
@@ -11,6 +11,10 @@
 {% if not type %}
     {% set type = 'button' %}
 {% endif %}
+{% if icon %}
+    {% set text_button = '<i class="' ~ icon ~ '"></i>' %}
+{% endif %}
+
 {% if button %}
     <button
             {% if id  %}
