edit navigation with menu context

--- a/admin/view/stylesheet/d_visualize/components/edit/_edit-menu.scss
+++ b/admin/view/stylesheet/d_visualize/components/edit/_edit-menu.scss
@@ -64,7 +64,7 @@
   &-theme-menu-wrap {
     position: relative;
   }
-  &-navigation {
+  &-navigation__nav {
     flex: 0 1 100%;
     .nav {
       margin-left: -5px;
