edit navigation with menu context

--- a/admin/view/template/extension/module/d_visualize.twig
+++ b/admin/view/template/extension/module/d_visualize.twig
@@ -11,6 +11,7 @@
 <script type="text/javascript">
 	$(document).ready(function () {
 		d_visualize.initState({{ state|json_encode }});
+		Vue.directive(VueModelVuex)
 		Vue.use(Vuex);
 		Vue.use(new VueOptions({{ options|json_encode }}));
 		var router = new VueRouter({
