work on default opencart

--- a/catalog/view/theme/d_visualize/template/component/breadcrumb/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/breadcrumb/default.twig
@@ -1,10 +1,9 @@
-<!-- > d_breadcrumb -->
+<!-- > breadcrumb -->
 <div class="container">
     <div class="row">
         <div class="col-md-12">
             <ul class="breadcrumb">
                 {% set count = 0 %}
-
                 {% for breadcrumb in breadcrumbs %}
                     {% set count = count + 1 %}
 
@@ -18,4 +17,4 @@
         </div>
     </div>
 </div>
-<!-- /> d_breadcrumb -->
+<!-- /> breadcrumb -->
