--- a/catalog/view/theme/d_visualize/template/extension/module/featured.twig
+++ b/catalog/view/theme/d_visualize/template/extension/module/featured.twig
@@ -2,7 +2,7 @@
     <h2 class="heading-h2 vz-extension__featured__heading">{{ heading_title }}</h2>
     <div class="row">
         {% for product in products %}
-            <div class="product-layout col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="product-layout col-lg-3 col-md-6 col-xs-12">
                 {% include partial.d_product_thumb.template with partial.d_product_thumb|merge({ product:product  }) %}
             </div>
         {% endfor %}
